--- a/mypractice/p1scene.html
+++ b/mypractice/p1scene.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-
 <html>
 
 <head>
     <title>Example 01.01 - Basic skeleton</title>
     <script type="text/javascript" src="../libs/three.js"></script>
+	<script src="../libs/DDSLoader.js"></script>
+	<script src="../libs/OBJLoader.js"></script>
+	<script type="text/javascript" src="../libs/OrbitControls.js"></script>
+	<script type="text/javascript" src="../libs/stats.js"></script>
     <style>
         body {
             /* set margin to 0 and overflow to hidden, to
@@ -87,12 +89,25 @@
         baseZ.vertices.push(new THREE.Vector3(0,0,-100));
         scene.add(new THREE.Line(baseZ,material))
 
+		var geometryRing = new THREE.RingGeometry( 8, 5, 32 );
+		var textureRing = THREE.ImageUtils.loadTexture('../assets/textures/planets/SaturnRing.png');//new THREE.TextureLoader().load(img);
+		var materialRing = new THREE.Mesh( { map: textureRing ,side: THREE.DoubleSide} );
+		// var materialRing = new THREE.MeshBasicMaterial( { color: 0xffff00, side: THREE.DoubleSide } );
+		var meshRing = new THREE.Mesh( geometryRing, materialRing );
+		meshRing.rotation.y=45
+		meshRing.rotation.z=45
+		meshRing.position.x=20;
+		meshRing.position.y=20;
+		meshRing.position.z=20;
+		scene.add( meshRing );
 
         // position and point the camera to the center of the scene
         camera.position.x = 30;
         camera.position.y = 40;
         camera.position.z = 30;
         camera.lookAt(scene.position);
+
+
 
         // add subtle ambient lighting
         var ambientLight = new THREE.AmbientLight(0x888888);
