--- a/mypractice/p1scene.html
+++ b/mypractice/p1scene.html
@@ -89,14 +89,14 @@
         baseZ.vertices.push(new THREE.Vector3(0,0,-100));
         scene.add(new THREE.Line(baseZ,material))
 
-		var geometryRing = new THREE.RingGeometry( 8, 5, 32 );
-		var textureRing = THREE.ImageUtils.loadTexture('../assets/textures/planets/SaturnRing.png');//new THREE.TextureLoader().load(img);
-		var materialRing = new THREE.Mesh( { map: textureRing ,side: THREE.DoubleSide} );
+		var geometryRing = new THREE.RingGeometry( 8, 5, 36 );
+		var textureRing = THREE.ImageUtils.loadTexture( '../assets/textures/planets/SaturnRing.png' /* '../assets/textures/planets/Saturn.jpg' */);//new THREE.TextureLoader().load(img);
+		var materialRing = new THREE.MeshPhongMaterial( { map: textureRing ,side: THREE.DoubleSide} );
 		// var materialRing = new THREE.MeshBasicMaterial( { color: 0xffff00, side: THREE.DoubleSide } );
 		var meshRing = new THREE.Mesh( geometryRing, materialRing );
 		meshRing.rotation.y=45
 		meshRing.rotation.z=45
-		meshRing.position.x=20;
+		// meshRing.position.x=20;
 		meshRing.position.y=20;
 		meshRing.position.z=20;
 		scene.add( meshRing );
